# investment-project

./: CMakeLists.txt
Cstuffs/include/: Game.h  Stock.h  User.h
Cstuffs/src/: User.cpp  driver.cpp
JS/: Game.js  Stock.js  StockCollection.js  User.js  stocks.json
JS/investor/: .gitignore  app.yaml  package-lock.json  package.json  webpack.config.js
JS/investor/public/: index.html
JS/investor/src/client/: base.css  main.js
JS/investor/src/client/views/: Instructions.ejs  autoSector.ejs  clothingSector.ejs  diningSector.ejs  entertainmentSector.ejs  landing.ejs  market.ejs  profile.ejs  start.ejs  techSector.ejs
JS/investor/src/server/: index.js
assets/: CardTemplate.PSD
include/: Event.h  EventCollectionHandler.h  Game.h  Stock.h  StockCollectionHandler.h  User.h
src/: Event.cpp  EventCollectionHandler.cpp  Game.cpp  Stock.cpp  StockCollectionHandler.cpp  User.cpp  driver.cpp
txt/: StockList.txt
